attempted to fix css nav alignment

--- a/bahks/media/css/eliseo.css
+++ b/bahks/media/css/eliseo.css
@@ -91,8 +91,9 @@ h4 strong {
 /*- NAVBAR -*/
 /************/
 .navbar {
-	margin:0 0 15px;
+	margin:0 auto 15px;
 	margin-bottom: 80px;
+	width: 100%;
 }
 
 .navbar .nav ul {
